<resources>

    <string name="app_name"><font color='#373737'>NATOUR</font></string>

    <!-- Activity_Run -->
    <string name="activityRun_slogan"><font color='#373737'>Adventure awaits, go find it!</font></string>
    <string name="activityRun_signin">Sign in</string>
    <string name="activityRun_noaccountyet"><font color='#373737'>No account yet?</font><font color='#88B27E'> Sign up</font></string>

    <!-- Activity_Auth -->
    <string name="activityAuth_username">Username</string>
    <string name="activityAuth_password">Password</string>
    <string name="activityAuth_emailid">Email ID</string>
    <string name="activityAuth_retypepassword">Re-type password</string>
    <string name="activityAuth_signingoogle">Sign in with Google</string>
    <string name="activityAuth_signinfacebook">Sign in with Facebook</string>
    <string name="activityAuth_orsigninwith">Or, sign in with</string>
    <string name="activityAuth_signup">Sign up</string>
    <string name="activityAuth_terms">By signing up, you agree to our Terms &amp; Privacy Policy.</string>
    <string name="activityAuth_alreadyhaveanaccount"><font color='#373737'>Already have an account?</font><font color='#88B27E'> Sign in</font></string>


</resources>