<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SigninFragment">

    <TextView
        android:id="@+id/fragmentSignin_signintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/activityRun_signin"
        android:textColor="#373737"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fragmentSignin_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/username_edittext"
        android:drawableStart="@drawable/ic_usericon"
        android:drawablePadding="16dp"
        android:hint="@string/activityAuth_username"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentSignin_signintext"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/fragmentSignin_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/username_edittext"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="16dp"
        android:hint="@string/activityAuth_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentSignin_username"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/fragmentSignin_orsigninwith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="33dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/activityAuth_orsigninwith"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/fragmentSignin_signinwithgoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentSignin_signin" />

    <Button
        android:id="@+id/fragmentSignin_signin"
        android:layout_width="fill_parent"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/signin_button"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/activityRun_signin"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/fragmentSignin_orsigninwith"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentSignin_password"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/fragmentSignin_signinwithgoogle"
        android:layout_width="fill_parent"
        android:layout_height="61dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/signup_button"
        android:stateListAnimator="@null"
        android:drawableStart="@drawable/ic_google_favicon"
        android:drawablePadding="-37dp"
        android:fontFamily="@font/roboto_light"
        android:paddingStart="16dp"
        android:text="@string/activityAuth_signingoogle"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentSignin_orsigninwith" />

    <Button
        android:id="@+id/fragmentSignin_signinwithfacebook"
        android:layout_width="fill_parent"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/signup_button"
        android:drawableStart="@drawable/ic_facebook_favicon"
        android:drawablePadding="-37dp"
        android:fontFamily="@font/roboto_light"
        android:paddingStart="16dp"
        android:stateListAnimator="@null"
        android:text="@string/activityAuth_signinfacebook"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentSignin_signinwithgoogle"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>